--- a/src/app/privado/habitacion/habitacion.component.html
+++ b/src/app/privado/habitacion/habitacion.component.html
@@ -1,98 +1,89 @@
 <div class="container default-container">
 	<div class="col-md-12">
-			<h2>
-				Habitaciones
-				<button type="button" class="btn btn-danger rounded-circle border-0 pull-right" (click)="setNuevo()" data-toggle="modal" data-target="#habitacionModal">
-					<i class="fa fa-plus" aria-hidden="true"></i>
-				</button>
-			</h2>
-			<hr class="my-2">
+		<h2>
+			Habitaciones
+			<button type="button" class="btn btn-danger rounded-circle border-0 pull-right" (click)="setNuevo()" data-toggle="modal"
+			 data-target="#habitacionModal">
+				<i class="fa fa-plus" aria-hidden="true"></i>
+			</button>
+		</h2>
+		<hr class="my-2">
 	</div>
 	<div class="col-md-12">
 		<div class="card">
-		  <div class="card-body">
-		    <h2>Registro
-		    	<small>Habitaciones</small>
-		    </h2>
+			<div class="card-body">
+				<h2>Registro
+					<small>Habitaciones</small>
+				</h2>
 				<table class="table table-striped table-responsive">
-				  <thead>
-				    <tr>
-				      <th width="15%">#Habitación</th>
-				      <th width="50%">Nombre</th>
-				      <th width="25%">Tarifa</th>
-				      <th width="10%">Editar/Eliminar</th>
-				    </tr>
-				  </thead>
-				  <tbody>
-				    <tr *ngFor="let room of rooms">
-				      <td width="15%">{{room.noHabitacion}}</td>
-				      <td width="50%">{{room.habitacion}}</td>
-				      <td width="25%">{{room.tarifa | currency:'USD':true}}</td>
-				      <td width="10%" class="text-center">
-				      	<div class="btn-group grid-btn" role="group">
-						  <button type="button" (click)="setModi(room)" class="btn btn-sm btn-primary" data-toggle="modal" data-target="#habitacionModal">
-						  	<i class="fa fa-pencil" aria-hidden="true"></i>
-						  </button>
-						  <button type="button" (click)="setElim(room)" class="btn btn-sm btn-outline-danger" data-toggle="modal" data-target="#confirmModal">
-						  	<i class="fa fa-trash" aria-hidden="true"></i>
-						  </button>
-						</div>
-				      </td>
-				    </tr>
-				  </tbody>
+					<thead>
+						<tr>
+							<th width="25%">#Habitación</th>
+							<th width="60%">Nombre</th>
+							<!-- <th width="25%">Tarifa</th> -->
+							<th width="25%"></th>
+							<th width="15%">Editar/Eliminar</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr *ngFor="let room of rooms">
+							<td width="25%">{{room.noHabitacion}}</td>
+							<td width="60%">{{room.habitacion}}</td>
+							<!-- <td width="25%">{{room.tarifa | currency:'USD':true}}</td> -->
+							<td width="25%"></td>
+							<td width="15%" class="text-center">
+								<div class="btn-group grid-btn" role="group">
+									<button type="button" (click)="setModi(room)" class="btn btn-sm btn-primary" data-toggle="modal" data-target="#habitacionModal">
+										<i class="fa fa-pencil" aria-hidden="true"></i>
+									</button>
+									<button type="button" (click)="setElim(room)" class="btn btn-sm btn-outline-danger" data-toggle="modal" data-target="#confirmModal">
+										<i class="fa fa-trash" aria-hidden="true"></i>
+									</button>
+								</div>
+							</td>
+						</tr>
+					</tbody>
 				</table>
-		  </div>
+			</div>
 		</div>
 	</div>
 </div>
 <!-- MODAL HABITACION -->
 <div *ngIf="model" class="modal fade" id="habitacionModal">
-  <div class="modal-dialog modal-md" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title">Habitación</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-	    <form name="form" class="col-md-12" (ngSubmit)="f.form.valid && guardar(f)" #f="ngForm" [ngClass]="{ 'was-validated': f.submitted }" novalidate><!--
-	    	<div class="btn-group grid-btn" role="group">
-			  <button type="button" (click)="setNuevo()" class="btn btn-outline-primary">
-			  	<i class="fa fa-file-text-o" aria-hidden="true"></i>
-			  </button>
-			  <button type="reset" (click)="readOnly=true" class="btn btn-outline-primary">
-			  	<i class="fa fa-repeat" aria-hidden="true"></i>
-			  </button>
-			</div> -->
-	        <div class="form-group">
-	            <label for="noHabitacion">#Habitación</label>
-	            <input type="number" class="form-control col-md-4" name="noHabitacion" [(ngModel)]="model.noHabitacion" #noHabitacion="ngModel" required />
-	            <div *ngIf="f.submitted && !noHabitacion.valid" class="invalid-feedback">El número de la habitación es requerido</div>
-	        </div>
-	        <div class="form-group">
-	            <label for="habitacion">Nombre</label>
-	            <input type="text" class="form-control col-md-8" name="habitacion" [(ngModel)]="model.habitacion" #habitacion="ngModel" maxlength="100" required />
-	            <div *ngIf="f.submitted && !habitacion.valid" class="invalid-feedback">El nombre de la habitación es requerido</div>
-	        </div>
-	        <div class="form-group">
+	<div class="modal-dialog modal-md" role="document">
+		<div class="modal-content">
+			<div class="modal-header">
+				<h5 class="modal-title">Habitación</h5>
+				<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+					<span aria-hidden="true">&times;</span>
+				</button>
+			</div>
+			<form name="form" class="col-md-12" (ngSubmit)="f.form.valid && guardar(f)" #f="ngForm" [ngClass]="{ 'was-validated': f.submitted }"
+			 novalidate>
+				<div class="form-group">
+					<label for="noHabitacion">#Habitación</label>
+					<input type="number" class="form-control col-md-4" name="noHabitacion" [(ngModel)]="model.noHabitacion" #noHabitacion="ngModel"
+					 required />
+					<div *ngIf="f.submitted && !noHabitacion.valid" class="invalid-feedback">El número de la habitación es requerido</div>
+				</div>
+				<div class="form-group">
+					<label for="habitacion">Nombre</label>
+					<input type="text" class="form-control col-md-8" name="habitacion" [(ngModel)]="model.habitacion" #habitacion="ngModel" maxlength="100"
+					 required />
+					<div *ngIf="f.submitted && !habitacion.valid" class="invalid-feedback">El nombre de la habitación es requerido</div>
+				</div>
+				<!-- <div class="form-group">
 	            <label for="tarifa">Tarifa</label>
 	            <input type="text" class="form-control col-md-4" name="tarifa" [(ngModel)]="model.tarifa" #tarifa="ngModel" appMoneda="true" required />
 	            <div *ngIf="f.submitted && !tarifa.valid" class="invalid-feedback">La tarifa por noche es requerida</div>
-	        </div>
-	        <!-- <div class="form-group">
-	            <button [disabled]="readOnly" class="btn btn-primary pull-right">
-	            	<i class="fa fa-floppy-o" aria-hidden="true"></i>
-	            	Guardar
-	            </button>
-	            <img *ngIf="loading" src="/assets/images/loading.svg" />
 	        </div> -->
-	        <div class="modal-footer">
-						<img *ngIf="loading" src="/assets/images/loading.svg" />
-	          <button *ngIf="!loading" type="submit" class="btn btn-primary">Guardar
-	          </button>
-	          <button *ngIf="!loading" type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
-	        </div>
-	    </form>
-    </div>
-  </div>
+				<div class="modal-footer">
+					<img *ngIf="loading" src="/assets/images/loading.svg" />
+					<button *ngIf="!loading" type="submit" class="btn btn-primary">Guardar
+					</button>
+					<button *ngIf="!loading" type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+				</div>
+			</form>
+		</div>
+	</div>
 </div>
